# race4green

./: .editorconfig  .gitignore  README.md  docker-compose.yml  kong.yml
backend/: README.md
backend/iam_service/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  requirements.txt
backend/integrations_service/: .devcontainer.json  Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.yml  mongo-init.js  pyproject.toml  requirements.txt
backend/integrations_service/app/: dependencies.py  exception_handlers.py  main.py  middlewares.py  requests.py  responses.py  router.py
backend/integrations_service/core/: exceptions.py  settings.py
backend/integrations_service/core/db/: mongo_connector.py  redis_connector.py
backend/integrations_service/core/db/repositories/: csrf_state.py  sync.py  tiktok_token.py  token.py
backend/integrations_service/core/models/: tiktok_integration.py  user.py
backend/integrations_service/core/services/: tiktok_integration.py
backend/integrations_service/core/usecases/: tiktok_integration.py
backend/integrations_service/integrations-service/core/services/: tiktok_integration.py
backend/integrations_service/integrations-service/core/usecases/: tiktok_integration.py
backend/integrations_service/src/app/: dependencies.py  main.py  router.py
backend/integrations_service/src/core/: exceptions.py
backend/integrations_service/src/core/models/: tiktok_integration.py  token.py
docker_directories/integrations_service/: init.js
frontend/: README.md
frontend/landing_page/: Dockerfile  index.html  (+3 more)
(+79 files in other folders)
